--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+fastapi = "^0.75.0"
+uvicorn = "^0.17.6"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+aiokafka = "^0.7.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
