Added description & config

--- a/examples/example.env
+++ b/examples/example.env
@@ -11,3 +11,7 @@ KAFKA_BOOTSTRAP_SERVERS="kafka:9092,kafka2:9092,kafka3:9092"
 KAFKA_SASL_PLAIN_USERNAME=
 KAFKA_SASL_PLAIN_PASSWORD=
 #KAFKA_SSL_CAFILE=
+
+####### JWT #######
+JWT_SECRET_KEY="buz"
+JWT_ALGORITHMS="['HS256']"
