--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 fastapi = "^0.75.1"
 uvicorn = "^0.17.6"
 aiokafka = "^0.7.2"
+python-jose = "^3.3.0"
 
 
 [tool.poetry.dev-dependencies]
