--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,7 @@ ignore-comments = true
 
 
 [tool.pytest.ini_options]
-asyncio_mode = "strict"
+asyncio_mode = "auto"
 log_cli = true
 log_cli_level = "INFO"
 log_cli_format = "%(levelname)-5.5s [%(name)s] %(message)s"
