--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ fastapi = "^0.75.1"
 uvicorn = "^0.17.6"
 aiokafka = "^0.7.2"
 python-jose = "^3.3.0"
+gunicorn = "^20.1.0"
 
 
 [tool.poetry.dev-dependencies]
