--- a/ugc/Dockerfile
+++ b/ugc/Dockerfile
@@ -12,3 +12,5 @@ RUN pip install --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "ugc.src:app", "--worker-class", "uvicorn.workers.UvicornWorker"]
