missing orjson requirement in requirements.txt. Pass CA.pem kafka cert to docker container through environment variable. Readme update.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "./.env"
     expose:
       - 8000
+    volumes:
+      - ${KAFKA_SSL_CAFILE}:/usr/src/app/CA.pem
 #    ports:
 #      - "8000:8000"
 
