--- a/examples/example.env
+++ b/examples/example.env
@@ -5,13 +5,14 @@
 #PROJECT_OPENAPI_URL="/api/openapi.json"
 
 ####### KAFKA SECTION #######
-#KAFKA_SECURITY_PROTOCOL="SASL_SSL"
-#KAFKA_SASL_MECHANISM="SCRAM-SHA-512"
-KAFKA_BOOTSTRAP_SERVERS="kafka:9092,kafka2:9092,kafka3:9092"
-KAFKA_SASL_PLAIN_USERNAME=
-KAFKA_SASL_PLAIN_PASSWORD=
-#KAFKA_SSL_CAFILE=
+KAFKA_SECURITY_PROTOCOL="SASL_SSL"
+KAFKA_SASL_MECHANISM="SCRAM-SHA-512"
+KAFKA_BOOTSTRAP_SERVERS=<kafka-server-name>:<kafka-port>
+KAFKA_SASL_PLAIN_USERNAME=practicum
+KAFKA_SASL_PLAIN_PASSWORD=password
+# leave below KAFKA_SSL_CAFILE parameter value unchanged
+KAFKA_SSL_CAFILE=/usr/src/app/CA.pem
 
 ####### JWT #######
 JWT_SECRET_KEY="buz"
-JWT_ALGORITHMS="['HS256']"
+JWT_ALGORITHMS="HS256"
