--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ uvicorn = "^0.17.6"
 aiokafka = "^0.7.2"
 python-jose = "^3.3.0"
 gunicorn = "^20.1.0"
+aiochclient = "^2.1.0"
 
 
 [tool.poetry.dev-dependencies]
