Readme update. Clickhouse migrations.

--- a/examples/example.env
+++ b/examples/example.env
@@ -13,6 +13,12 @@ KAFKA_SASL_PLAIN_PASSWORD=password
 # leave below KAFKA_SSL_CAFILE parameter value unchanged
 KAFKA_SSL_CAFILE=/usr/src/app/CA.pem
 
+######## CLICKHOUSE SECTION ########
+#CLICKHOUSE_URL=
+#CLICKHOUSE_USER=
+#CLICKHOUSE_PASSWORD=
+#CLICKHOUSE_DATABASE=
+
 ####### JWT #######
 JWT_SECRET_KEY="buz"
 JWT_ALGORITHMS="HS256"
