--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ aiokafka = "^0.7.2"
 python-jose = "^3.3.0"
 gunicorn = "^20.1.0"
 aiochclient = "^2.1.0"
+orjson = "^3.6.7"
 
 
 [tool.poetry.dev-dependencies]
