--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
       - id: check-toml
       - id: check-added-large-files
       - id: name-tests-test
+        exclude: settings.py
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v0.942'
