--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -2,9 +2,9 @@ name: Python application
 
 on:
   push:
-    branches: [ master, dev ]
+    branches: [ master, dev, 67-24-ci ]
   pull_request:
-    branches: [ master, dev ]
+    branches: [ master, dev, 67-24-ci ]
 
 jobs:
   build:
