feat: implement sentry

--- a/examples/example.env
+++ b/examples/example.env
@@ -22,3 +22,8 @@ KAFKA_SSL_CAFILE=/etc/CA.pem
 ####### JWT #######
 JWT_SECRET_KEY="buz"
 JWT_ALGORITHMS="HS256"
+
+###### SENTRY SECTION #######
+#SENTRY_DSN="https://..."
+#SENTRY_SAMPLE_RATE=1.0
+#SENTRY_TRACES_SAMPLE_RATE=0.0
