--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-jose = "^3.3.0"
 gunicorn = "^20.1.0"
 aiochclient = "^2.1.0"
 orjson = "^3.6.7"
+sentry-sdk = "^1.5.10"
 
 
 [tool.poetry.dev-dependencies]
