--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ aiochclient = "^2.1.0"
 orjson = "^3.6.7"
 lz4tools = "^1.3.1"
 xxhash = "^3.0.0"
+accessify = "^0.3.1"
 
 
 [tool.poetry.dev-dependencies]
