--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ gunicorn = "^20.1.0"
 aiochclient = "^2.1.0"
 orjson = "^3.6.7"
 sentry-sdk = "^1.5.10"
+jupyter = "^1.0.0"
+requests = "^2.27.1"
+pymongo = "^4.1.1"
 
 
 [tool.poetry.dev-dependencies]
