--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ sentry-sdk = "^1.5.10"
 jupyter = "^1.0.0"
 requests = "^2.27.1"
 pymongo = "^4.1.1"
+clickhouse-driver = "^0.2.3"
 
 
 [tool.poetry.dev-dependencies]
