--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,3 +18,14 @@ jobs:
         with:
           max_line_length: 88
           ignore: E203,W503
+
+  notify:
+    runs-on: ubuntu-latest
+    steps:
+      - name: send default message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            ${{ github.actor }} send pull request to ${{ github.repository }}
